Updated website files

--- a/WhatIsMicroBit.html
+++ b/WhatIsMicroBit.html
@@ -2,7 +2,7 @@
 <html id="body">
     <head>
         <title>Crankshaft Tech Coding - What is Micro:Bit?</title>
-        <link rel="stylesheet" type="text/css" href="style6.css"/>
+        <link rel="stylesheet" type="text/css" href="style8.css"/>
         <link rel="icon" href="favicon.ico" type="image/x-icon"/>
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,7 +31,7 @@
                 <img onclick="openSidebar()" id="menuButton2" class="dropbtn2" src="menu.png">
               </div>
                 <div class="dropdown" style="float:right;">
-                  <button class="dropbtn" id="menuButton" onclick="openSidebar()">Menu</button>
+                  <button class="dropbtn" id="menuButton" onclick="openSidebar()">&#9776;</button>
                   <div class="sideMenu" id="mainMenu">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeSideBar()">&times;</a>
                   <div class="dropdown-content">
