--- a/Contact.html
+++ b/Contact.html
@@ -32,7 +32,7 @@
                 <div class="sideMenu" id="mainMenu">
                   <a href="javascript:void(0)" class="closebtn" onclick="closeSideBar()">&times;</a>
                 <div class="dropdown-content" >
-                    <a href="index.html">Home</a>
+                    <a href="/">Home</a>
                     <a class="selected">Contact</a>
                     <a href="Lessons.html">Lessons</a>
                     <a href="AboutMe.html">About Me</a>
