--- a/AboutMe.html
+++ b/AboutMe.html
@@ -28,7 +28,7 @@
 
               <div id="header">
                   <div id="logo">
-                      <a  href="index.html"><img class="imglogo"  src="logo.png" width="100%"/></a>
+                      <a  href="/"><img class="imglogo"  src="logo.png" width="100%"/></a>
                   </div>
                   <div class="dropimg">
                   <img onclick="openSidebar()" id="menuButton2" class="dropbtn2" src="menu.png">
@@ -38,7 +38,7 @@
                     <div class="sideMenu" id="mainMenu">
                       <a href="javascript:void(0)" class="closebtn" onclick="closeSideBar()">&times;</a>
                     <div class="dropdown-content" >
-                    <a href="index.html">Home</a>
+                    <a href="/">Home</a>
                     <a href="Contact.html">Contact</a>
                     <a href="Lessons.html">Lessons</a>
                     <a class="selected">About Me</a>
