--- a/Contact.html
+++ b/Contact.html
@@ -22,7 +22,7 @@
 
           <div id="header">
               <div id="logo">
-                  <a  href="index.html"><img class="imglogo"  src="logo.png" width="100%"/></a>
+                  <a  href="/"><img class="imglogo"  src="logo.png" width="100%"/></a>
               </div>
               <div class="dropimg">
               <img onclick="openSidebar()" id="menuButton2" class="dropbtn2" src="menu.png">
