--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 
             <div id="header">
                 <div id="logo">
-                    <a  href="index.html"><img class="imglogo"  src="logo.png" width="100%"/></a>
+                    <a  href="/"><img class="imglogo" src="logo.png" width="100%"/></a>
                 </div>
                 <div class="dropimg">
                 <img onclick="openSidebar()" id="menuButton2" class="dropbtn2" src="menu.png">
               </div>
                 <div class="dropdown" style="float:right;">
                   <button class="dropbtn" id="menuButton" onclick="openSidebar()">&#9776;</button>
-                  <div class="sideMenu" id="mainMenu">
-                    <a href="javascript:void(0)" class="closebtn" onclick="closeSideBar()">&times;</a>
+                  <div class="sideMenu" id="mainMenu" >
+                    <a href="javascript:void(0)"  class="closebtn" onclick="closeSideBar()">&times;</a>
                   <div class="dropdown-content" >
                     <a  class="selected">Home</a>
                     <a href="Contact.html">Contact</a>
