--- a/WhatIsSmallBasic.html
+++ b/WhatIsSmallBasic.html
@@ -25,7 +25,7 @@
         <div id="container">
             <div id="header">
                 <div id="logo">
-                    <a href="index.html"><img class="imglogo" src="logo.png" width="100%"/></a>
+                    <a href="/"><img class="imglogo" src="logo.png" width="100%"/></a>
                 </div>
                 <div class="dropimg">
               <img onclick="openSidebar()" id="menuButton2" class="dropbtn2" src="menu.png">
@@ -35,7 +35,7 @@
                   <div class="sideMenu" id="mainMenu">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeSideBar()">&times;</a>
                   <div class="dropdown-content">
-                    <a href="index.html">Home</a>
+                    <a href="/">Home</a>
                     <a href="Contact.html">Contact</a>
                     <a href="Lessons.html">Lessons</a>
                     <a href="AboutMe.html">About Me</a>
