--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
         </center>
         <div id="copyright">
-            Copyright &copy; 2019 Crankshaft Technology
+            2020 Crankshaft Technology
         </div>
         </div>
 
