--- a/Contact.html
+++ b/Contact.html
@@ -94,7 +94,7 @@
             </div>
 
             <div id="copyright">
-                Copyright &copy; 2019 Crankshaft Technology
+                2020 Crankshaft Technology
             </div>
         </div>
     </body>
