--- a/AboutMe.html
+++ b/AboutMe.html
@@ -66,7 +66,7 @@
             </div>
 
             <div id="copyright">
-                Copyright &copy; 2019 Crankshaft Technology
+                2020 Crankshaft Technology
             </div>
         </div>
     </body>
