--- a/WhatIsSmallBasic.html
+++ b/WhatIsSmallBasic.html
@@ -63,7 +63,7 @@
             </div>
 
             <div id="copyright">
-                Copyright &copy; 2019 Crankshaft Technology
+                2020 Crankshaft Technology
             </div>
         </div>
     </body>
